[package]
name = "poc-framework"
version = "0.2.0"
authors = []
edition = "2018"
repository = "https://github.com/neodyme-labs/solana-poc-framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["solana", "smart", "contracts"]
description = "A framework for creating PoC's for Solana Smart Contracts in a painless and intuitive way"

[dependencies]
itertools = "0.10.1"
bincode = "1.3.3"
rand = "0.7.3"
borsh = "0.9.1"
solana-sdk = { path = "../sdk/" }
solana-program = { path = "../sdk/program/" }
solana-logger = { path = "../logger/" }
solana-runtime = { path = "../runtime/" }
solana-transaction-status = { path = "../transaction-status/" }
solana-cli-output = { path = "../cli-output/" }
solana-bpf-loader-program = { path = "../programs/bpf_loader/" }
solana-compute-budget-program = { path = "../programs/compute-budget/" }
solana-vote-program = { path = "../programs/vote/" }
solana-stake-program = { path = "../programs/stake/" }
solana-config-program = { path = "../programs/config/" }
solana-client = { path = "../client/" }
solana-faucet = { path = "../faucet/" }
spl-token = { path = "../program/" }
spl-memo = { path = "../memo/" }
spl-associated-token-account = { path = "../spl-associated/" }
serde = "1.0.125"
sha2 = "0.10.2"
libsecp256k1 = "0.7.1"
sha3 = "0.10.0"
hex = "0.4.3"
once_cell = "1.9.0"
solana-ledger = { path = "../ledger/" }
poc-framework-v3 = { path = "../poc-framework-v3/"}

[dev-dependencies]
solana-program-runtime = { path = "../program-runtime/" }
