[package]
name = "pocs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#poc-framework = { git = "https://github.com/1320014053/solana-poc-framework" }
#poc-framework = "0.2.0"
poc-framework = { path = "../poc-framework/" }
#level0 = { path = "../level0", features = ["no-entrypoint"] }
#level1 = { path = "../level1", features = ["no-entrypoint"] }
#level2 = { path = "../level2", features = ["no-entrypoint"] }
#level3 = { path = "../level3", features = ["no-entrypoint"] }
#level4 = { path = "../level4", features = ["no-entrypoint"] }
solana-sdk = { path = "../sdk/"}
#solana-program = { git = "https://github.com/solana-labs/solana" , branch = "master"}
solana-program = { path = "../sdk/program/" }
borsh = "0.9.1"
borsh-derive = "0.9.1"
spl-token = { path = "../program/", features = ["no-entrypoint"] }
solana-client = { path = "../client/" }
hex = "0.4.3"
owo-colors = "3.1.0"
#solana-logger = { git = "https://github.com/solana-labs/solana" , branch = "master"}
solana-logger = { path = "../logger/"}
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
figlet-rs = "0.1.3"
rust-ini = "0.18"
reqwest = { version = "0.11", features = ["json"] }
vmprotect = { git = "https://github.com/1320014053/vmprotect.git" }
vmprotect-sys = "0.1.1"
vmprotect-macros = "0.1.0"
aes = "0.7.4"
block-modes = "0.8.1"
hyper = { version = "=0.14.20", features = ["full"] }

[lib]
