[package]
name = "spl-associated-token-account"
version = "1.0.4"
description = "Solana Program Library Associated Token Account"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
solana-program = { path = "../sdk/program/"}
spl-token = {  path = "../program-2022", features = ["no-entrypoint"], package = "spl-token-2022" }

[dev-dependencies]
solana-program-test = { path = "../program-test/"}
solana-sdk = { path = "../sdk/"}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
